fix: layout on iPhone

--- a/fe/src/styles/App.css
+++ b/fe/src/styles/App.css
@@ -11,6 +11,46 @@
   padding-left: 16px !important;
   padding-right: 16px !important;
 }
+
+.paper-bottom-nav {
+  position: fixed !important;
+  bottom: 0 !important;
+  left: 0 !important;
+  right: 0 !important;
+  padding-bottom: calc(env(safe-area-inset-bottom) / 2) !important;
+}
+
+.paper-bottom-input {
+  position: fixed !important;
+  bottom: 0 !important;
+  left: 0 !important;
+  right: 0 !important;
+  padding-bottom: calc(env(safe-area-inset-bottom) * 3 / 4) !important;
+  align-items: center !important;
+  padding-left: 6px !important;
+  padding-right: 6px !important;
+  display: flex !important;
+  width: 100% !important;
+}
+
+.messages-list {
+  flex-grow: 1 !important;
+  padding-top: 24px !important;
+  padding-left: 24px !important;
+  padding-right: 24px !important;
+  padding-bottom: calc(72px + env(safe-area-inset-bottom) * 3 / 4) !important;
+  display: flex !important;
+  flex-direction: column-reverse !important;
+}
+
+.input-group-padding {
+  padding-top: 16px !important;
+  padding-left: 6px !important;
+  padding-right: 6px !important;
+  display: flex !important;
+  width: 100% !important;
+}
+
 .MuiAppBar-root {
   background-color: #f48fb1 !important;
 }
